# src/entities/todo/types.ts
@@ -9,8 +9,6 @@ export const Priority = {
 export type Priority = components["schemas"]["Priority"];
 export type TodoParticipant = components["schemas"]["TodoParticipant"];
 
-export type Todo = Omit<components["schemas"]["Todo"], "assignee"> & {
-  assignee: TodoParticipant | null;
-};
+export type Todo = components["schemas"]["Todo"];
 export type CreateTodoInput = components["schemas"]["CreateTodoInput"];
 export type UpdateTodoInput = components["schemas"]["UpdateTodoInput"];
